@@ -4,7 +4,8 @@ Changelog
 1.0.8 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix UnicodeDecodeError on utf8-encoded Subject strings.
+  [tisto]
 
 
 1.0.7 (2013-01-01)
